# Dice

./: CMakeLists.txt  main.cpp
Graphics/: CMakeLists.txt  GLBox.cpp  GLBox.h  GLGraphicsItem.h  GLWidget.cpp  GLWidget.h  Shaders.qrc
Graphics/Shaders/: fshader.frag  vshader.vert
UI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
